--- a/business-intelligence.html
+++ b/business-intelligence.html
@@ -73,6 +73,18 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qBM9Vfwb&k=Job&j=oWOM9fwp&__jvst=Employee+Referral%3a+Eligible&__jvsd=sVjqMgwb&__jvsc=Twitter&bid=neUboMwY'>Apttus Careers - Business Intelligence Operations Analyst</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
+<h5><a href='https://project-a.join.com/jobs/465579-business-intelligence-analyst-m-f-d'>Job @ Project A Ventures (Berlin): Business Intell... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
+<h5><a href='https://project-a.join.com/jobs/469653-business-intelligence-analyst-m-w-d'>Job @ Project A Ventures (Berlin): Business Intell... | JOIN</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on: 2019-10-30</p>
+<hr/>
 <h5><a href='https://www.greatinsurancejobs.com/job/6409300/business-intelligence-intern-big-/?TrackID=97736'>Business Intelligence Intern (BIG) job with Travelers Insurance | 6409300</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
@@ -117,7 +129,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://www.bsh-ag.de/job/consultant-business-intelligencecontrolling-mw-standort-bayreuth/'>Consultant Business Intelligence/Controlling (m/w) Standort Bayreuth</a></h5> 
+<h5><a href='https://www.bsh-ag.de/job/consultant-business-intelligencecontrolling-mw-standort-bayreuth/'>Consultant Business Intelligence/Controlling (m/w) Standort Bayreuth</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-29</p>
 <hr/>
@@ -149,7 +161,7 @@
 <p><span class="badge badge-light">New York, New York</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/payu/jobs/4497509002'>Job Application for Senior Business Intelligence Specialist at PayU</a></h5> 
+<h5><a href='https://boards.greenhouse.io/payu/jobs/4497509002'>Job Application for Senior Business Intelligence Specialist at PayU</a></h5> 
 <p><span class="badge badge-light">Bogot?</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -157,7 +169,7 @@
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/capgemini-japan/job/ofVrbfww'>Capgemini Japan Careers - Business Intelligence Infra Developer/ Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/capgemini-japan/job/ofVrbfww'>Capgemini Japan Careers - Business Intelligence Infra Developer/ Architect</a></h5> 
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -206,7 +218,7 @@ Business Intelligence Analyst - SQL&amp; Tableau Job in London ?32-38K</a></h5>
 <p><span class="badge badge-light">London</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ozMZafwe&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n59BlMwr'>Freedom Financial Network Careers - Business Intelligence/Data Analyst III</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=ozMZafwe&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n59BlMwr'>Freedom Financial Network Careers - Business Intelligence/Data Analyst III</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
@@ -251,7 +263,7 @@ data modeling, ETL and report development and mentors others on the best?...</p>
 <p><span class="badge badge-light">Lenexa, KS</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/surveymonkey/jobs/1933995'>Job Application for Business Intelligence Analyst  at SurveyMonkey</a></h5> 
+<h5><a href='https://boards.greenhouse.io/surveymonkey/jobs/1933995'>Job Application for Business Intelligence Analyst  at SurveyMonkey</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -308,7 +320,7 @@ using?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/hkstrategies/job/oyvpbfwn'>Hill+Knowlton Strategies Careers - Coordenador de Business Intelligence - Comunica??o</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/hkstrategies/job/oyvpbfwn'>Hill+Knowlton Strategies Careers - Coordenador de Business Intelligence - Comunica??o</a></h5> 
 <p><span class="badge badge-light">Sao Paulo, Brazil</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
@@ -395,7 +407,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light">United States California</span></p>
 <p>Posted on:: 2019-10-22</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://thurrock.referrals.selectminds.com/jobs/strategic-lead-business-intelligence-290'>Strategic Lead - Business Intelligence - Thurrock Council Careers</a></h5> 
+<h5><a href='https://thurrock.referrals.selectminds.com/jobs/strategic-lead-business-intelligence-290'>Strategic Lead - Business Intelligence - Thurrock Council Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -419,7 +431,7 @@ THIS JOB. Already applied? Check the status of your application. Share this job:
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697842870-junior-business-intelligence-analyst'>Bosch Group Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/BoschGroup/743999697842870-junior-business-intelligence-analyst'>Bosch Group Junior Business Intelligence Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-22</p>
 <hr/>
@@ -464,25 +476,13 @@ Pittsburgh offices. Experience in R and Python is preferred.</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999697651138-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999697651138-business-intelligence-data-architect'>CompuGain Solutions Business Intelligence Data Architect | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-21</p>
 <hr/>
 <h5><a href='https://jobs.jobvite.com/jbs/job/obWnbfwp'> JBS USA Careers - IT BUSINESS INTELLIGENCE ANALYST</a></h5> 
 <p><span class="badge badge-light">Greeley, Colorado</span></p>
 <p>Posted on: 2019-10-21</p>
-<hr/>
-<h5><a href='https://raisin.join.com/jobs/442579-junior-business-intelligence-engineer-m-f-d'>Job @ Raisin (Berlin): Junior Business Intelligenc... | JOIN</a></h5> 
-<p><span class="badge badge-light">Berlin Berlin, Germany  Berlin</span></p>
-<p>Posted on: 2019-10-21</p>
-<hr/>
-<h5><a href='https://abbvie.referrals.selectminds.com/jobs/business-intelligence-architect-12416'>Business Intelligence Architect - AbbVie Careers</a></h5> 
-<p><span class="badge badge-light"></span></p>
-<p>Posted on: 2019-10-20</p>
-<hr/>
-<h5><a href='https://jobs.smartrecruiters.com/smartrecruiters83/743999697727094-business-intelligence-engineer-profitable-saas-startup-120k-160k-equity-401-k-match-pto-flexible-work-schedule-plus-more-'>IT Pros Business Intelligence Engineer - Profitable SaaS Startup ($120K-$160K / Equity / 401(K) Match / PTO / Flexible Work Schedule / Plus More) | SmartRecruiters</a></h5> 
-<p><span class="badge badge-light">Philadelphia, PA</span></p>
-<p>Posted on: 2019-10-20</p>
 <hr/>
 
 
