--- a/ios-engineer.html
+++ b/ios-engineer.html
@@ -226,7 +226,7 @@ code to prove it; Javascript experience a plus; You know how to architect all?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/thredup/4b26f9f3-bc97-4dd7-9f5c-755d39628523'>thredUP - Senior iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/thredup/4b26f9f3-bc97-4dd7-9f5c-755d39628523'>thredUP - Senior iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Kiev, Ukraine</span></p>
 <p>Posted on: 2019-10-18</p>
 <hr/>
@@ -264,7 +264,7 @@ social and mobile platforms. Founded by a team of experienced gaming and?...</p>
 <p><span class="badge badge-light">Porto, Portugal</span></p>
 <p>Posted on:: 2019-10-16</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/wolt/14620336-d6f2-4703-8478-8d70385cd853'>Wolt - iOS Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/wolt/14620336-d6f2-4703-8478-8d70385cd853'>Wolt - iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Helsinki, Finland</span></p>
 <p>Posted on: 2019-10-14</p>
 <hr/>
@@ -309,7 +309,7 @@ Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
 <p><span class="badge badge-light">London  London Oxford</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://farmdrop.workable.com/j/AA3BE0F126'>Farmdrop - Jobs: Senior iOS Software Engineer - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://farmdrop.workable.com/j/AA3BE0F126'>Farmdrop - Jobs: Senior iOS Software Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -345,7 +345,7 @@ Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
 <p><span class="badge badge-light">Berlin</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
-<h5><a href='https://neugelb.join.com/jobs/418122-devops-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): DevOps Engineer (m... | JOIN</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://neugelb.join.com/jobs/418122-devops-engineer-m-f-d'>Job @ NEUGELB Studios (Berlin): DevOps Engineer (m... | JOIN</a></h5> 
 <p><span class="badge badge-light">Berlin Berlin, Germany</span></p>
 <p>Posted on: 2019-10-11</p>
 <hr/>
@@ -353,7 +353,7 @@ Our fast-paced and entrepreneurial environment is paired with the strong?...</p>
 <p><span class="badge badge-light">Tokyo, Japan</span></p>
 <p>Posted on: 2019-10-10</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://expedia.wd5.myworkdayjobs.com/en-US/search/job/USA---Washington---Bellevue/iOS-Software-Engineer_R-47526'>iOS Software Engineer</a></h5> 
+<h5><a href='https://expedia.wd5.myworkdayjobs.com/en-US/search/job/USA---Washington---Bellevue/iOS-Software-Engineer_R-47526'>iOS Software Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Oct 1, 2019 ... Egencia. Launched in 2002 as Expedia Corporate Travel, Egencia has become 
 the fourth largest Travel Management Company in the world because of our?...</p>
@@ -413,7 +413,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
-<h5><a href='https://tribalscale.workable.com/j/CCDD63A4FF'>TribalScale - Jobs: iOS Engineer - Toronto - Apply online</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://tribalscale.workable.com/j/CCDD63A4FF'>TribalScale - Jobs: iOS Engineer - Toronto - Apply online</a></h5> 
 <p><span class="badge badge-light">Toronto Toronto  Toronto  Toronto, Ontario, Canada</span></p>
 <p>Posted on: 2019-10-06</p>
 <hr/>
@@ -449,7 +449,7 @@ the fourth largest Travel Management Company in the world because of our?...</p>
 <p><span class="badge badge-light">Seoul</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/stars-group/job/oJwgbfwq'>The Stars Group Careers - iOS Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/stars-group/job/oJwgbfwq'>The Stars Group Careers - iOS Engineer</a></h5> 
 <p><span class="badge badge-light">Leeds, United Kingdom</span></p>
 <p>Posted on: 2019-10-04</p>
 <hr/>
