--- a/security.html
+++ b/security.html
@@ -39,6 +39,10 @@
   
     <div class="container">
 <!--Begin body here --> 
+<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qoZ9Vfwb&k=Job&j=oW4MafwG&__jvst=Employee+Referral&__jvsd=seBixgwp&__jvsc=Twitter&bid=nMNboMwp'>Imperva Careers - Cloud Security Engineer, Managed Services</a></h5> 
+<p><span class="badge badge-light"></span></p>
+<p>Posted on:: 2019-10-30</p>
+<hr/>
 <h5><a href='https://boards.greenhouse.io/gitlab/jobs/4489255002'>Job Application for Senior Security Engineer, Abuse at GitLab</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-29</p>
@@ -253,7 +257,7 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light">Paris, France</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698264304-sr-security-analyst'>CompuGain Solutions Sr Security Analyst | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/CompuGainSolutions/743999698264304-sr-security-analyst'>CompuGain Solutions Sr Security Analyst | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Orlando, FL, USA</span></p>
 <p>Posted on: 2019-10-28</p>
 <hr/>
@@ -269,11 +273,11 @@ vida de milhares de usu?rios. Acreditamos em ambientes ?geis,?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on:: 2019-10-27</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/voleon/0ca2005e-af5c-4dbc-adbe-a97393fa6426'>The Voleon Group - Senior Security Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/voleon/0ca2005e-af5c-4dbc-adbe-a97393fa6426'>The Voleon Group - Senior Security Engineer</a></h5> 
 <p><span class="badge badge-light">Berkeley</span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
-<h5><a href='https://boards.greenhouse.io/xorsecurity/jobs/4495444002'>Job Application for Senior Security Engineer at XOR Security</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/xorsecurity/jobs/4495444002'>Job Application for Senior Security Engineer at XOR Security</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-27</p>
 <hr/>
@@ -364,11 +368,11 @@ data leakage prevention; Responsible for Web application firewall and related?..
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oHCIafwV&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n7JjlMwL'>Freedom Financial Network Careers - Application Security Engineer</a></h5> 
+<h5><a href='https://jobs.jobvite.com/careers/service/redirect?c=qC9aVfwA&k=Job&j=oHCIafwV&__jvst=Employee&__jvsd=sNJTqgwA&__jvsc=Twitter&bid=n7JjlMwL'>Freedom Financial Network Careers - Application Security Engineer</a></h5> 
 <p><span class="badge badge-light">Tempe, Arizona</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
-<h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oeenbfwK&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nUdjlMw2'>Herjavec Group Careers - Senior Security Engineer, Qradar/Splunk</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://jobs.jobvite.com/careers/service/redirect?c=qJEaVfwc&k=Job&j=oeenbfwK&__jvst=Employee&__jvsd=swgOAhwW&__jvsc=Twitter&bid=nUdjlMw2'>Herjavec Group Careers - Senior Security Engineer, Qradar/Splunk</a></h5> 
 <p><span class="badge badge-light">London, United Kingdom</span></p>
 <p>Posted on:: 2019-10-26</p>
 <hr/>
@@ -398,7 +402,7 @@ data leakage prevention; Responsible for Web application firewall and related?..
 <p><span class="badge badge-light">Bengaluru</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
-<h5><a href='https://jobs.jobvite.com/xylem-nor/job/onBnbfwg'>Xylem Careers - Senior Security Architect</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.jobvite.com/xylem-nor/job/onBnbfwg'>Xylem Careers - Senior Security Architect</a></h5> 
 <p><span class="badge badge-light">North Carolina</span></p>
 <p>Posted on: 2019-10-26</p>
 <hr/>
@@ -448,10 +452,6 @@ application penetration tester. Here in Ryanair, you will conduct Manual?...</p>
 <hr/>
 <h5><a href='https://geico.referrals.selectminds.com/jobs/security-data-analyst-10744'>Security Data Analyst - GEICO Careers</a></h5> 
 <p><span class="badge badge-light">United States</span></p>
-<p>Posted on: 2019-10-24</p>
-<hr/>
-<h5><a href='https://jobs.lever.co/3dhubs/eec9fdd7-53d5-43c3-872e-9a147e5ec8e3'>3D Hubs - Cyber Security Engineer [WebApps]</a></h5> 
-<p><span class="badge badge-light">Amsterdam</span></p>
 <p>Posted on: 2019-10-24</p>
 <hr/>
 
